Update to 50 API calls across continental US regions for comprehensive police alert coverage

--- a/PoliceTracker2.0/.github/workflows/fetch-police-alerts.yml
+++ b/PoliceTracker2.0/.github/workflows/fetch-police-alerts.yml
@@ -24,6 +24,7 @@ jobs:
         echo "Repository: ${{ github.repository }}"
         echo "Branch: ${{ github.ref }}"
         echo "Commit: ${{ github.sha }}"
+        echo "This will make 50 API calls across continental US regions"
       
     - name: Test Supabase Connection
       run: |
