Improve workflow reliability and add better debugging for scheduled runs

--- a/PoliceTracker2.0/.github/workflows/fetch-police-alerts.yml
+++ b/PoliceTracker2.0/.github/workflows/fetch-police-alerts.yml
@@ -2,16 +2,23 @@ name: Fetch Police Alerts
 
 on:
   schedule:
-    # Run every 5 minutes (UTC time)
+    # Run every 5 minutes (UTC time) - GitHub Actions may have delays
     - cron: '*/5 * * * *'
   workflow_dispatch: # Allow manual triggering
   push:
     branches: [ main, master ]
+  # Add repository_dispatch for external triggers
+  repository_dispatch:
+    types: [fetch_alerts]
 
 jobs:
   fetch-alerts:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
+    # Add retry logic for failed runs
+    strategy:
+      fail-fast: false
+      max-parallel: 1
     
     steps:
     - name: Checkout code
@@ -25,6 +32,14 @@ jobs:
         echo "Branch: ${{ github.ref }}"
         echo "Commit: ${{ github.sha }}"
         echo "This will make 50 API calls across continental US regions"
+        echo "UTC Time: $(date -u)"
+        echo "Local Time: $(date)"
+        echo "Cron Schedule: */5 * * * * (every 5 minutes)"
+        if [ "${{ github.event_name }}" = "schedule" ]; then
+          echo "✅ Triggered by scheduled cron job"
+        else
+          echo "ℹ️  Triggered by ${{ github.event_name }}"
+        fi
       
     - name: Test Supabase Connection
       run: |
