Configure app for Play Store release

--- a/PoliceTracker2.0/PoliceTracker/eas.json
+++ b/PoliceTracker2.0/PoliceTracker/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 5.9.1"
+    "version": ">= 5.9.1",
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
@@ -17,6 +18,9 @@
       }
     },
     "production": {
+      "android": {
+        "buildType": "app-bundle"
+      },
       "ios": {
         "resourceClass": "m-medium"
       }
