Update .easignore with more exclusions

--- a/PoliceTracker2.0/PoliceTracker/.easignore
+++ b/PoliceTracker2.0/PoliceTracker/.easignore
@@ -7,8 +7,15 @@
 .Trashes/
 Library/
 ~/Library/
-../*
-../
+../../*
+../../../*
+../../../../*
+../../../../../*
+
+# System paths that might be picked up
+/Users/*/Library/
+/System/
+/Library/
 
 # Node modules and build directories
 node_modules/
