Viewport-based fetching, caching, hidden police filter fix, time filter correctness, UI tweaks

--- a/PoliceTracker2.0/PoliceTracker/eas.json
+++ b/PoliceTracker2.0/PoliceTracker/eas.json
@@ -1,7 +1,6 @@
 {
   "cli": {
-    "version": ">= 5.9.1",
-    "appVersionSource": "local"
+    "version": ">= 5.9.1"
   },
   "build": {
     "development": {
@@ -18,9 +17,6 @@
       }
     },
     "production": {
-      "android": {
-        "buildType": "app-bundle"
-      },
       "ios": {
         "resourceClass": "m-medium"
       }
