--- a/PoliceTracker2.0/PoliceTracker/app.json
+++ b/PoliceTracker2.0/PoliceTracker/app.json
@@ -1,14 +1,12 @@
 {
   "expo": {
-    "name": "Police Tracker",
+    "name": "PoliceTracker",
     "slug": "PoliceTracker",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
-    "description": "Real-time police alert tracker to help you stay informed about traffic stops and police activity in your area.",
-    "privacy": "public",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -18,21 +16,16 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.policetracker.app",
-      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#1a1a2e"
       },
-      "edgeToEdgeEnabled": true,
-      "permissions": [
-        "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.INTERNET"
-      ],
-      "playStoreUrl": "https://play.google.com/store/apps/details?id=com.policetracker.app",
-      "googleServicesFile": "./google-services.json"
+      "edgeToEdgeEnabled": true
     },
+    "permissions": [
+      "android.permission.ACCESS_COARSE_LOCATION",
+      "android.permission.ACCESS_FINE_LOCATION"
+    ],
     "web": {
       "favicon": "./assets/favicon.png"
     },
